--- a/style.css
+++ b/style.css
@@ -1,40 +1,51 @@
+/* Styling HTM Elements */
+
+/* Changing scrolling to smooth */
 html{
     scroll-behavior: smooth;
 }
+
+/* Setting web page colour */
 body{
     background-color: #fafafa;
     font-family: "Avenir", monospace;
 }
 
+/* Changing Akosua Koranteng colour */
 .navbar-brand{
     color: #BD8345 !important;
     font-weight: bold;
 }
 
+/* Making sure Navbar position remains fixed */
 .navbar{
     position: fixed;
     top: 0;
     z-index: 20;
     width:100%;
 }
+
+/* Changing size and shape of picture */
 .profile-picture{
     border-radius: 50%;
     width: 100%;
     height: auto;
-    margin-top: 25%;
-   
+    margin-top: 25%
 }
+
+/* Changing intro text font */
 .intro{
     margin-top: 60%;
     font-family:"Avenir", monospace;
 }
+
+/* Changing subintro text font */
 .sub-intro{
     font-family: "Avenir light", monospace;
     font-size: 20px;
-
 }
 
-
+/* Formatting about section */
 .about {
     text-align: center;
     font-family: "Avenir", monospace;
@@ -42,15 +53,13 @@ body{
     margin-bottom: 5%;
 }
 
+/* Formatting about header */
 .about h3{
     font-family: "Avenir light", monospace;
     font-size: 20px;
 }
-.about img{
-    margin-top: 10%;
-    margin-bottom: 5%;
-}
 
+/* Formatting page footer */
 .footer {
     text-align: center;
     font-family: "Avenir", monospace;
@@ -59,19 +68,21 @@ body{
     padding-bottom: 2%;
 }
 
+/* Removing underline from links */
 .footer a{
     text-decoration: none;
 }
 
+/* Setting it to change colour when hovering, using important to 
+overide colour settings */
 .footer a:hover{
     color: #BD8345 !important;
-
 }
-.fa-linkedin{
 
+/* Changing  icon colour*/
+.fa-linkedin{
     color: black !important;
 }
-
 
 .fa-github{
     color: black !important;
@@ -83,6 +94,7 @@ body{
     padding-left: 2%;
 }
 
+/* Formatting card grid */
 .card-grid{
     max-width: 1100px;
     margin: 0 auto;
@@ -91,7 +103,7 @@ body{
     grid-gap: 2em;
 }
 
-
+/* Formatting each card */
 .card{
     margin-left: 10%;
     background-color: #fafafa;
@@ -102,13 +114,14 @@ body{
     max-width: 300px;
     margin-top: 5%;
     margin-bottom:10%
-
-    
 }
 
+/* Animating card when hovering */
 .card:hover{
     transform:scale(1.03)
 }
+
+/* Formatting card header */
 .card-header{
     border: none;
     font-size: 20px;
@@ -118,18 +131,23 @@ body{
     font-weight: bold;
 }
 
+/* Formatting card footer */
 .card-footer{
     border: none;
     background-color: #fafafa;
 }
+
+/* Removing underline on icon */
 .card-footer a {
     text-decoration: none;
-
 }
 
+/* Changing colour when hovering */
 .card-footer a:hover{
     color:#BD8345 !important;
 }
+
+/* Formatting headings */
 .skills h1{
     text-align: center;
 }
@@ -137,10 +155,13 @@ body{
 .projects h1{
     text-align: center;
 }
+
+/* Formatting projects section */
 .projects{
     margin-top:5%;
 }
 
+/* Formatting skills list section */
 .skills_list {
     max-width: 450px;
     width: 80%;
@@ -149,9 +170,9 @@ body{
     flex-wrap: wrap;
     margin-bottom: 2%;
     justify-content: center;
-   
 }
 
+/* Formatting buttons */
 .skills_list-item {
     margin-left: 10%;
     background-color: #fafafa;
@@ -161,15 +182,18 @@ body{
     margin: 0.5em;
 }
 
+/* Animating and changing colour when hovering */
 .skills_list-item:hover{
     color: #BD8345;
     transform:scale(1.03)
-
 }
 
+/* Formatting learning section */
 .learning h1{
     text-align:center;
 }
+
+/* Formatting learning list grid */
 .learning_list{
     max-width: 450px;
     width: 80%;
@@ -177,10 +201,10 @@ body{
     display:flex;
     flex-wrap: wrap;
     margin-bottom: 2%;
-    justify-content: center;
-   
+    justify-content: center; 
 }
 
+/* Formatting buttons */
 .learning_list-item{
     margin-left: 10%;
     background-color: #fafafa;
@@ -188,9 +212,9 @@ body{
     border: none;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.2);
     margin: 0.5em;
-
 }
 
+/* Animating and changing colour when hovering */
 .learning_list-item:hover{
     color:#BD8345;
     transform:scale(1.03)
